--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -3,29 +3,30 @@
 <html lang="en">
 
 <head>
-    <title>Silicon Private Limited</title>
+    <title> CODE Industries Limited </title>
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
-    <link rel = "icon" href ="{% static 'img/titleicon.png' %}" type = "image/x-icon"> 
-              
+    <link rel="icon" href="{% static 'img/starkicon.jpg' %}" type="image/x-icon">
+
 </head>
 
 <body>
     <div class="container">
-    <div class="banner">
-        Silicon Private Limited.
-    </div>
-    <div class="menu">
-        <div class="menuitem"><a href="/home">Home</a></div> 
-        <div class="menuitem"><a href="/products">Products</a></div> 
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div> 
-    </div><div class="content">
-    {% block content %}    
-    {% endblock  %}
-    </div>
-    <div class="footer">
-        Copyright © 2020 Silicon Private Limited, Developed by Obed Otto.
-    </div>
+        <div class="banner">
+            CODE Industries Limited
+        </div>
+        <div class="menu">
+            <div class="menuitem"><a href="/home">Home</a></div>
+            <div class="menuitem"><a href="/products">Products</a></div>
+            <div class="menuitem"><a href="/people">People</a></div>
+            <div class="menuitem"><a href="/contactus">Contact Us</a></div>
+        </div>
+        <div class="content">
+            {% block content %}
+            {% endblock  %}
+        </div>
+        <div class="footer">
+            Copyright © 2021 CODE Industries Limited, Developed by Emma Watson
+        </div>
     </div>
 </body>
 
