--- a/website/templates/website/products.html
+++ b/website/templates/website/products.html
@@ -1,23 +1,93 @@
 {% extends "website/base.html" %}
 
 {% block content %}
-    <div class="productcontent">    
+<div class="productcontent">
     <h1>Our Premium Products</h1>
     <div class="productitems">
-        <div class="productitem"> 
+        <div class="productitem">
             <div class="itemimage">
-            <img src="/static/img/c1.jpg" alt="product image">
+                <img src="/static/img/c1.jpeg" alt="product image">
             </div>
             <div class="itemname">4GB DDRA4 laptop memory</div>
             <div class="itemprice">Price: Rs.2000.00 </div>
         </div>
-        <div class="productitem"> 
+        <div class="productitem">
             <div class="itemimage">
-            <img src="/static/img/c2.jpg"  alt="product image">
+                <img src="/static/img/c2.jpg" alt="product image">
             </div>
             <div class="itemname">1TB Laptop HDD</div>
             <div class="itemprice">Price: Rs.5000.00 </div>
         </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/graphic card.png" alt="product image">
+            </div>
+            <div class="itemname">Graphic card</div>
+            <div class="itemprice">Price: Rs.30000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/mouse.jpg" alt="product image">
+            </div>
+            <div class="itemname">mouse</div>
+            <div class="itemprice">Price: Rs.2000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/speaker.webp" alt="product image">
+            </div>
+            <div class="itemname">speaker</div>
+            <div class="itemprice">Price: Rs.5000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/ram rgb.jpg" alt="product image">
+            </div>
+            <div class="itemname">ram rgb</div>
+            <div class="itemprice">Price: Rs.4000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/RGB Keyboard.jpg" alt="product image">
+            </div>
+            <div class="itemname">RGB Keyboard</div>
+            <div class="itemprice">Price: Rs.2500.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/SATA SSD.jpg" alt="product image">
+            </div>
+            <div class="itemname">SATA SSD (samsung)</div>
+            <div class="itemprice">Price: Rs.5000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/Boom Headset.jpg" alt="product image">
+            </div>
+            <div class="itemname">Boom Headset</div>
+            <div class="itemprice">Price: Rs.3000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/pendrive.jpg" alt="product image">
+            </div>
+            <div class="itemname">pendrive 64gb</div>
+            <div class="itemprice">Price: Rs.2000.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/iot-board.jpg" alt="product image">
+            </div>
+            <div class="itemname">iot-board</div>
+            <div class="itemprice">Price: Rs.5500.00 </div>
+        </div>
+        <div class="productitem">
+            <div class="itemimage">
+                <img src="/static/img/processor.jpg" alt="product image">
+            </div>
+            <div class="itemname">intel i9 9900k processor</div>
+            <div class="itemprice">Price: Rs.36000.00 </div>
+        </div>
     </div>
-    </div>
+</div>
 {% endblock  %}
